# RustChat

./: .env  Cargo.toml
jwt_generator/: cargo.toml
jwt_generator/src/: main.rs
src/: main.rs
